--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,88 @@
 .App {
-  text-align: center;
+    text-align: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+        sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Global CSS */
+button {
+    border-radius: 20px;
+    border: none;
+    padding: 10px 20px 10px 20px;
+    background-color: tomato;
+    color: #ffffff;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button:hover {
+    background-color: black;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+/* END Global CSS */
+
+/* Header */
+.Header {
+    display: flex;
+    justify-content: center;
+    background-color: darkorange;
+    margin: 0;
+    padding: 0;
+    border-radius: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.Header a {
+    text-decoration: none;
+    color: black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Header a:hover,
+a.active {
+    color: white;
 }
+/* END Header */
+
+.Home {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 10px 50px 10px 50px;
+    justify-content: space-around;
+}
+
+.CardBox {
+    display: flex;
+    flex-direction: column;
+    width: 400px;
+    height: 700px;
+    border: 1px solid #e4e4e4;
+    margin: 20px 0px 20px 0px;
+    padding: 15px 25px 15px 25px;
+    justify-content: center;
+    align-items: center;
+}
+
+.CardBox:hover {
+    box-shadow: 0 0 11px rgba(33, 33, 33, 0.2);
+}
+
+.CardBox img {
+    width: 120px;
+}
+
+/* SignIn */
+.SignIn form {
+    display: flex;
+    flex-direction: column;
+    width: 20%;
+    height: 100px;
+    justify-content: space-between;
+    margin-left: 40%;
+    margin-top: 50px;
+}
+
+.SignIn form input {
+    padding: 5px 10px 5px 10px;
+    border: 1px solid grey;
+    border-radius: 20px;
+}
+
+/* END SignIn */
